--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
     </div>
   </div>
   <!--WHY CHOOSE US-->
-  <div class="container-fluid background-color  m-0  p-0 " style="height: 100vh;" id="information">
+  <div class="container-fluid background-color  m-0  p-0 " style="height: ;" id="information">
     <p class=" fs-5 text-center fonts" style="padding-top: 65px;">Best Products</p>
     <h2 class="display-6  text-center fonts"> Why Choose Us?</h2>
     <div class="row">
