--- a/bed.html
+++ b/bed.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>BED COLLECTION</title>
     <link rel="stylesheet" href="bootstrap.min.css">
     <link rel="stylesheet" href="bootstrap.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
@@ -28,8 +28,8 @@
                 class="card-img-top h-50 img-item" alt="...">
             <div class="card-body m-0 ">
                 <h5 class="card-title">BED</h5>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                <p class="card-text"> Price starts from $30.00-$150.00</p>
+                <p>Nilkamal Arthur Engineered Wood Bed Without Storage</p>
+                <p class="card-text">$100.00</p>
                 <a href="#" class="btn btn-secondary">BUY NOW</a>
             </div>
         </div>
@@ -38,8 +38,8 @@
                 alt="...">
             <div class="card-body m-0 ">
                 <h5 class="card-title">BED</h5>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                <p class="card-text"> Price starts from $30.00-$150.00</p>
+                <p>Solimo Tucana Engineered Wood Walnut Finish Queen Bed</p>
+                <p class="card-text">$90.00</p>
                 <a href="#" class="btn btn-secondary">BUY NOW</a>
             </div>
         </div>
@@ -48,8 +48,8 @@
                 alt="...">
             <div class="card-body m-0 ">
                 <h5 class="card-title">BED</h5>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                <p class="card-text"> Price starts from $30.00-$150.00</p>
+                <p>Nilkamal Marbito King Bed Engineered Wood with Headboard & Box Storage</p>
+                <p class="card-text">$95.00</p>
                 <a href="#" class="btn btn-secondary">BUY NOW</a>
             </div>
         </div>
@@ -58,8 +58,8 @@
                 alt="...">
             <div class="card-body m-0 ">
                 <h5 class="card-title">BED</h5>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                <p class="card-text"> Price starts from $30.00-$150.00</p>
+                <p>Wakefit Bed | 1 Year Warranty | Double Bed, Queen Size Bed</p>
+                <p class="card-text">$110.00</p>
                 <a href="#" class="btn btn-secondary">BUY NOW</a>
             </div>
         </div>
@@ -69,8 +69,8 @@
                     class="card-img-top h-50 img-item" alt="...">
                 <div class="card-body m-0 ">
                     <h5 class="card-title">BED</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <p class="card-text"> Price starts from $30.00-$150.00</p>
+                    <p>RJ ART Solid Sheesham Wood King Size Bed</p>
+                    <p class="card-text">$85.00</p>
                     <a href="#" class="btn btn-secondary">BUY NOW</a>
                 </div>
             </div>
@@ -79,8 +79,8 @@
                     class="card-img-top h-50 img-item" alt="...">
                 <div class="card-body m-0 ">
                     <h5 class="card-title">BED</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <p class="card-text"> Price starts from $30.00-$150.00</p>
+                    <p>DecorNation Julius Upholstered Platform Bed for Bedroom</p>
+                    <p class="card-text">$75.00</p>
                     <a href="#" class="btn btn-secondary">BUY NOW</a>
                 </div>
             </div>
@@ -89,8 +89,8 @@
                     class="card-img-top h-50 img-item" alt="...">
                 <div class="card-body m-0 ">
                     <h5 class="card-title">BED</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <p class="card-text"> Price starts from $30.00-$150.00</p>
+                    <p> Solimo Neptune Engineered Wood Queen Wenge Finish Bed with Storage</p>
+                    <p class="card-text">$80.00</p>
                     <a href="#" class="btn btn-secondary">BUY NOW</a>
                 </div>
             </div>
@@ -99,8 +99,8 @@
                     class="card-img-top h-50 img-item" alt="...">
                 <div class="card-body m-0 ">
                     <h5 class="card-title">BED</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <p class="card-text"> Price starts from $30.00-$150.00</p>
+                    <p>WOOD EMPIRE Solid Wood King Size Platform Upholstered Bed</p>
+                    <p class="card-text">$65.00</p>
                     <a href="#" class="btn btn-secondary">BUY NOW</a>
                 </div>
             </div>
