--- a/index.html
+++ b/index.html
@@ -112,93 +112,114 @@
       <h2 class="h2 text-center mt-3 fw-bold text">Explore Collection</h2>
     </div>
     <div class="row justify-content-evenly pt-3 m-3  ">
-      <a href="sofa.html" class="col-2 h300  m-2 justify-content-center align-items-center d-flex flex-column text-decoration-none ">
+      <a href="sofa.html"
+        class="col-2 h300  m-2 justify-content-center align-items-center d-flex flex-column text-decoration-none ">
         <i class="fa-solid fa-couch icon text-dark "></i>
         <p class="description text-dark ">Sofa</p>
       </a>
-      <a href="table.html" class="col-2 h300  m-2 justify-content-center align-items-center d-flex flex-column text-decoration-none">
+      <a href="table.html"
+        class="col-2 h300  m-2 justify-content-center align-items-center d-flex flex-column text-decoration-none">
         <i class="fa-solid fa-table icon text-dark"></i>
         <p class="description text-dark">Table</p>
       </a>
-      <a href="bed.html" class="col-2 h300  m-2 justify-content-center align-items-center d-flex flex-column text-decoration-none">
+      <a href="bed.html"
+        class="col-2 h300  m-2 justify-content-center align-items-center d-flex flex-column text-decoration-none">
         <i class="fa-solid fa-bed icon text-dark "></i>
         <p class="description text-dark ">Bed</p>
       </a>
-      <a href="lamp.html" class="col-2 h300  m-2 justify-content-center align-items-center d-flex flex-column text-decoration-none ">
+      <a href="lamp.html"
+        class="col-2 h300  m-2 justify-content-center align-items-center d-flex flex-column text-decoration-none ">
         <i class="fa-solid fa-lightbulb icon text-dark "></i>
         <p class="description text-dark ">Lamp</p>
       </a>
     </div>
     <div class="row justify-content-evenly pt-3 m-3 ">
-      <div class="col-2 h300  m-2 justify-content-center align-items-center d-flex flex-column ">
-        <i class="fa-solid fa-utensils icon"></i>
-        <p class="description">Dining Table</p>
-      </div>
-      <div class="col-2 h300 m-2 justify-content-center align-items-center d-flex flex-column ">
-        <i class="fa-brands fa-windows icon"></i>
-        <p class="description">Mirrors</p>
-      </div>
-      <div class="col-2 h300 m-2 justify-content-center align-items-center d-flex flex-column ">
-        <i class="fa-solid fa-chair icon"></i>
-        <p class="description"> Chairs</p>
-      </div>
-      <div class="col-2 h300 m-2 justify-content-center align-items-center d-flex flex-column ">
-        <i class="fa-solid fa-door-open icon"></i>
-        <p class="description">Doors</p>
-      </div>
+      <a href="dining.html"
+        class="col-2 h300  m-2 justify-content-center align-items-center d-flex flex-column text-decoration-none">
+        <i class="fa-solid fa-utensils icon text-dark"></i>
+        <p class="description text-dark">Dining Table</p>
+      </a>
+      <a href="mirror.html"
+        class="col-2 h300 m-2 justify-content-center align-items-center d-flex flex-column text-decoration-none">
+        <i class="fa-brands fa-windows icon text-dark"></i>
+        <p class="description text-dark">Mirrors</p>
+      </a>
+      <a href="chairs.html"
+        class="col-2 h300 m-2 justify-content-center align-items-center d-flex flex-column text-decoration-none">
+        <i class="fa-solid fa-chair icon text-dark"></i>
+        <p class="description text-dark"> Chairs</p>
+      </a>
+      <a href="doors.html"
+        class="col-2 h300 m-2 justify-content-center align-items-center d-flex flex-column text-decoration-none">
+        <i class="fa-solid fa-door-open icon text-dark"></i>
+        <p class="description text-dark">Doors</p>
+      </a>
     </div>
   </div>
   <!--WHY CHOOSE US-->
   <div class="container-fluid background-color  m-0  p-0 " id="information">
     <p class=" fs-5 text-center fonts" style="padding-top: 65px;">Best Products</p>
     <h2 class="display-6  text-center fonts"> Why Choose Us?</h2>
-    <div class="row">
+    <div class="row justify-content-center ">
       <div
-        class="col  flex-column border border-1 border-secondary-subtle  justify-content-center align-items-center  d-flex m-3"
+        class="col-2 flex-column border border-1 border-secondary-subtle  justify-content-center align-items-center  d-flex m-3 services-box"
         style="height: 300px;">
         <i class="fa-solid fa-truck-fast fs-3 mb-1 "></i>
         <h3 class="fs-3 text-center ">Fast Delivery</h3>
         <p class="fs-6  text-center mt-1 ">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam, saepe!</p>
       </div>
       <div
-        class="col  flex-column border border-1 border-secondary-subtle justify-content-center align-items-center  d-flex m-3  ">
+        class="col-2 flex-column border border-1 border-secondary-subtle justify-content-center align-items-center  d-flex m-3  services-box">
         <i class="fa-regular fa-credit-card fs-3 mb-1"></i>
         <h3 class="fs-3 text-center">Free Shipping</h3>
         <p class="fs-6  text-center mt-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem, unde.</p>
       </div>
       <div
-        class="col  flex-column border border-1 border-secondary-subtle justify-content-center align-items-center  d-flex m-3  ">
+        class="col-2 flex-column border border-1 border-secondary-subtle justify-content-center align-items-center  d-flex m-3  services-box">
         <i class="fa-solid fa-shield-halved fs-3 mb-1"></i>
         <h3 class="fs-3 text-center">Secure Checkout</h3>
         <p class="fs-6  text-center mt-1">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed, atque!</p>
       </div>
       <div
-        class="col  flex-column border border-1 border-secondary-subtle justify-content-center align-items-center  d-flex m-3  ">
+        class="col-2 flex-column border border-1 border-secondary-subtle justify-content-center align-items-center  d-flex m-3 services-box ">
         <i class="fa-solid fa-cart-arrow-down fs-3 mb-1"></i>
         <h3 class="fs-3 text-center">Easy Returns</h3>
         <p class="fs-6  text-center mt-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, totam!</p>
       </div>
     </div>
-    <div class="row bg-secondary-subtle " style="height: 360px;">
+    <div class="row d-flex ">
+
+    </div>
+    <div class="row bg-secondary-subtle ">
+      <div class="col-12 align-items-center d-flex mb-5 " style="height: 40px;">
+        <div class="col-1 ms-auto me-4 justify-content-around d-flex  ">
+          <a href="#" title="Twitter"><i class="fa-brands fa-twitter text-dark "></i></a>
+          <a href="https://www.facebook.com/profile.php?id=100066635430719&mibextid=ZbWKwL" title="Facebook"><i
+              class="fa-brands fa-facebook text-dark"></i></a>
+          <a href="+917383433287" title="Whatsapp"><i class="fa-brands fa-whatsapp text-dark"></i></a>
+          <a href="https://www.instagram.com/henil__27?igsh=eHQ2NzNrYndtcHZt" title="Instagram"><i
+              class="fa-brands fa-instagram text-dark"></i></a>
+        </div>
+      </div>
       <div class="col-6 ">
         <h3 class="fs-2">FURNITURE</h3>
         <span>Shop</span>
       </div>
-      <div class="col flex-column d-flex ">
+      <div class="col flex-column d-flex mb-5 mt-5 ">
         <h4 class="fs-4 fonts">Links</h4>
         <a class="text-decoration-none text-dark" href="#">Story</a>
         <a class="text-decoration-none text-dark" href="#">Contact</a>
         <a class="text-decoration-none text-dark" href="#">Track Order</a>
         <a class="text-decoration-none text-dark" href="#">Help</a>
       </div>
-      <div class="col flex-column d-flex ">
+      <div class="col flex-column d-flex mb-5 mt-5">
         <h4 class="fs-4 fonts">Categories</h4>
         <a class="text-decoration-none text-dark" href="#">Bedroom(9)</a>
         <a class="text-decoration-none text-dark" href="#">Decor(11)</a>
         <a class="text-decoration-none text-dark" href="#">Living Room(5)</a>
         <a class="text-decoration-none text-dark" href="#">Office(6)</a>
       </div>
-      <div class="col flex-column d-flex ">
+      <div class="col flex-column d-flex mb-5 mt-5">
         <h4 class="fs-4 fonts">Subscribe</h4>
         <a class="text-decoration-none text-dark" href="#">Story</a>
         <a class="text-decoration-none text-dark" href="#">Contact</a>
