--- a/lamp.html
+++ b/lamp.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>LAMP COLLECTION</title>
     <link rel="stylesheet" href="bootstrap.min.css">
     <link rel="stylesheet" href="bootstrap.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
@@ -28,8 +28,8 @@
                 class="card-img-top h-50 img-item" alt="...">
             <div class="card-body m-0 ">
                 <h5 class="card-title">LAMP</h5>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                <p class="card-text"> Price starts from $30.00-$150.00</p>
+                <p>CASE PLUS Furniture Premium Lamps for Home Decoration with 6 Shelves</p>
+                <p class="card-text">$70.00</p>
                 <a href="#" class="btn btn-secondary">BUY NOW</a>
             </div>
         </div>
@@ -38,8 +38,8 @@
                 alt="...">
             <div class="card-body m-0 ">
                 <h5 class="card-title">LAMP</h5>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                <p class="card-text"> Price starts from $30.00-$150.00</p>
+                <p>Divine Trends Floor Lamp Standing Modern Black 5ft Height</p>
+                <p class="card-text">$100.00</p>
                 <a href="#" class="btn btn-secondary">BUY NOW</a>
             </div>
         </div>
@@ -48,8 +48,8 @@
                 alt="...">
             <div class="card-body m-0 ">
                 <h5 class="card-title">LAMP</h5>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                <p class="card-text"> Price starts from $30.00-$150.00</p>
+                <p>Crosscut Furniture Wooden Floor Lamp with Shelf in Dark Finish (Natural Jute)</p>
+                <p class="card-text">$90.00</p>
                 <a href="#" class="btn btn-secondary">BUY NOW</a>
             </div>
         </div>
@@ -58,8 +58,8 @@
                 alt="...">
             <div class="card-body m-0 ">
                 <h5 class="card-title">LAMP</h5>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                <p class="card-text"> Price starts from $30.00-$150.00</p>
+                <p>H A Crafty 6 Furniture Premium Lamps with Shelf for Home Decoration</p>
+                <p class="card-text"> $75.00</p>
                 <a href="#" class="btn btn-secondary">BUY NOW</a>
             </div>
         </div>
@@ -69,8 +69,8 @@
                     class="card-img-top h-50 img-item" alt="...">
                 <div class="card-body m-0 ">
                     <h5 class="card-title">LAMP</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <p class="card-text"> Price starts from $30.00-$150.00</p>
+                    <p>Silver MARTS4 Furniture Premium Lamps with Shelf for Home Decoration</p>
+                    <p class="card-text">$73.00</p>
                     <a href="#" class="btn btn-secondary">BUY NOW</a>
                 </div>
             </div>
@@ -79,8 +79,8 @@
                     class="card-img-top h-50 img-item" alt="...">
                 <div class="card-body m-0 ">
                     <h5 class="card-title">LAMP</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <p class="card-text"> Price starts from $30.00-$150.00</p>
+                    <p>IRA Furniture Bamboo Pendant Lamp</p>
+                    <p class="card-text">$85.00</p>
                     <a href="#" class="btn btn-secondary">BUY NOW</a>
                 </div>
             </div>
@@ -89,8 +89,8 @@
                     class="card-img-top h-50 img-item" alt="...">
                 <div class="card-body m-0 ">
                     <h5 class="card-title">LAMP</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <p class="card-text"> Price starts from $30.00-$150.00</p>
+                    <p>Reborn Furniture Playful Decorative Floor and Swing Arm Floor Lamp</p>
+                    <p class="card-text">$85.00</p>
                     <a href="#" class="btn btn-secondary">BUY NOW</a>
                 </div>
             </div>
@@ -99,8 +99,8 @@
                     class="card-img-top h-50 img-item" alt="...">
                 <div class="card-body m-0 ">
                     <h5 class="card-title">LAMP</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <p class="card-text"> Price starts from $30.00-$150.00</p>
+                    <p>U Smart Furniture Premium Lamps with Shelf for Home Decoration</p>
+                    <p class="card-text">$65.00</p>
                     <a href="#" class="btn btn-secondary">BUY NOW</a>
                 </div>
             </div>
