--- a/sofa.html
+++ b/sofa.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>SOFA COLLECTION</title>
     <link rel="stylesheet" href="bootstrap.min.css">
     <link rel="stylesheet" href="bootstrap.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
@@ -28,8 +28,8 @@
                 class="card-img-top h-50 img-item" alt="...">
             <div class="card-body m-0 ">
                 <h5 class="card-title">SOFA CHAIR</h5>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                <p class="card-text"> Price starts from $30.00-$150.00</p>
+                <p>Ganpati Arts Solid Sheesham Wood Diamond 3 Seater Sofa Cum Bed </p>
+                <p class="card-text">$60.00</p>
                 <a href="#" class="btn btn-secondary">BUY NOW</a>
             </div>
         </div>
@@ -38,8 +38,8 @@
                 alt="...">
             <div class="card-body m-0 ">
                 <h5 class="card-title">SOFA CHAIR</h5>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                <p class="card-text"> Price starts from $30.00-$150.00</p>
+                <p>BG Furniture Sheesham Wood 3 Seater Sofa Set (Honey Finish )</p>
+                <p class="card-text"> $100.00</p>
                 <a href="#" class="btn btn-secondary">BUY NOW</a>
             </div>
         </div>
@@ -48,8 +48,8 @@
                 alt="...">
             <div class="card-body m-0 ">
                 <h5 class="card-title">SOFA CHAIR</h5>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                <p class="card-text"> Price starts from $30.00-$150.00</p>
+                <p>RSFURNITURE Wooden 3 Seater Sofa for Living Room</p>
+                <p class="card-text">$120.00</p>
                 <a href="#" class="btn btn-secondary">BUY NOW</a>
             </div>
         </div>
@@ -58,8 +58,8 @@
                 alt="...">
             <div class="card-body m-0 ">
                 <h5 class="card-title">SOFA CHAIR</h5>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                <p class="card-text"> Price starts from $30.00-$150.00</p>
+                <p>Home furniture Wooden Sofa Set for Living Room and Office </p>
+                <p class="card-text">$50.00</p>
                 <a href="#" class="btn btn-secondary">BUY NOW</a>
             </div>
         </div>
@@ -69,8 +69,8 @@
                     class="card-img-top h-50 img-item" alt="...">
                 <div class="card-body m-0 ">
                     <h5 class="card-title">SOFA CHAIR</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <p class="card-text"> Price starts from $30.00-$150.00</p>
+                    <p>AMATA Eagle Sofa Cum Bed with Two Cushions Perfect for Home Living Room</p>
+                    <p class="card-text">$90.00</p>
                     <a href="#" class="btn btn-secondary">BUY NOW</a>
                 </div>
             </div>
@@ -79,8 +79,8 @@
                     class="card-img-top h-50 img-item" alt="...">
                 <div class="card-body m-0 ">
                     <h5 class="card-title">SOFA CHAIR</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <p class="card-text"> Price starts from $30.00-$150.00</p>
+                    <p>FUNTERIOR Bucks 5 Seater Sofa Bed Fabric Light Brown Sofa Set</p>
+                    <p class="card-text">$120.00</p>
                     <a href="#" class="btn btn-secondary">BUY NOW</a>
                 </div>
             </div>
@@ -89,8 +89,8 @@
                     class="card-img-top h-50 img-item" alt="...">
                 <div class="card-body m-0 ">
                     <h5 class="card-title">SOFA CHAIR</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <p class="card-text"> Price starts from $30.00-$150.00</p>
+                    <p>FURNIQUEST™ Solid Wood 3 Seater Sofa for Living Room </p>
+                    <p class="card-text"> $45.00</p>
                     <a href="#" class="btn btn-secondary">BUY NOW</a>
                 </div>
             </div>
@@ -99,8 +99,8 @@
                     class="card-img-top h-50 img-item" alt="...">
                 <div class="card-body m-0 ">
                     <h5 class="card-title">SOFA CHAIR</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <p class="card-text"> Price starts from $30.00-$150.00</p>
+                    <p>Jordyblue Single Seater Manual Recliner Sofa | Solid Wood</p>
+                    <p class="card-text">$65.00</p>
                     <a href="#" class="btn btn-secondary">BUY NOW</a>
                 </div>
             </div>
