--- a/table.html
+++ b/table.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>TABLE COLLECTION</title>
     <link rel="stylesheet" href="bootstrap.min.css">
     <link rel="stylesheet" href="bootstrap.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
@@ -28,8 +28,8 @@
                 class="card-img-top h-50 img-item" alt="...">
             <div class="card-body m-0 ">
                 <h5 class="card-title">TABLES</h5>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                <p class="card-text"> Price starts from $30.00-$150.00</p>
+                <p>ABOUT SPACE Coffee - Solid Finish Table Office L 3 X B 1.3 X 1.4 Ft</p>
+                <p class="card-text">$100.00</p>
                 <a href="#" class="btn btn-secondary">BUY NOW</a>
             </div>
         </div>
@@ -38,8 +38,8 @@
                 alt="...">
             <div class="card-body m-0 ">
                 <h5 class="card-title">TABLES</h5>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                <p class="card-text"> Price starts from $30.00-$150.00</p>
+                <p>ABOUT SPACE Coffee - Solid Finish Table Office L 3 X B 1.3 X 1.4 Ft</p>
+                <p class="card-text">$50.00</p>
                 <a href="#" class="btn btn-secondary">BUY NOW</a>
             </div>
         </div>
@@ -48,8 +48,8 @@
                 alt="...">
             <div class="card-body m-0 ">
                 <h5 class="card-title">TABLES</h5>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                <p class="card-text"> Price starts from $30.00-$150.00</p>
+                <p>ABOUT SPACE Coffee - Solid Finish Table Office L 3 X B 1.3 X 1.4 Ft</p>
+                <p class="card-text"> $70.00</p>
                 <a href="#" class="btn btn-secondary">BUY NOW</a>
             </div>
         </div>
@@ -58,8 +58,8 @@
                 alt="...">
             <div class="card-body m-0 ">
                 <h5 class="card-title">TABLES</h5>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                <p class="card-text"> Price starts from $30.00-$150.00</p>
+                <p>ABOUT SPACE Coffee - Solid Finish Table Office L 3 X B 1.3 X 1.4 Ft</p>
+                <p class="card-text"> $80.00</p>
                 <a href="#" class="btn btn-secondary">BUY NOW</a>
             </div>
         </div>
@@ -69,7 +69,7 @@
                     class="card-img-top h-50 img-item" alt="...">
                 <div class="card-body m-0 ">
                     <h5 class="card-title">TABLES</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <p>ABOUT SPACE Coffee - Solid Finish Table Office L 3 X B 1.3 X 1.4 Ft</p>
                     <p class="card-text"> Price starts from $30.00-$150.00</p>
                     <a href="#" class="btn btn-secondary">BUY NOW</a>
                 </div>
@@ -79,8 +79,8 @@
                     class="card-img-top h-50 img-item" alt="...">
                 <div class="card-body m-0 ">
                     <h5 class="card-title">TABLES</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <p class="card-text"> Price starts from $30.00-$150.00</p>
+                    <p>ABOUT SPACE Coffee - Solid Finish Table Office L 3 X B 1.3 X 1.4 Ft</p>
+                    <p class="card-text"> $76.00</p>
                     <a href="#" class="btn btn-secondary">BUY NOW</a>
                 </div>
             </div>
@@ -89,8 +89,8 @@
                     class="card-img-top h-50 img-item" alt="...">
                 <div class="card-body m-0 ">
                     <h5 class="card-title">TABLES</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <p class="card-text"> Price starts from $30.00-$150.00</p>
+                    <p>ABOUT SPACE Coffee - Solid Finish Table Office L 3 X B 1.3 X 1.4 Ft</p>
+                    <p class="card-text"> $55.00</p>
                     <a href="#" class="btn btn-secondary">BUY NOW</a>
                 </div>
             </div>
@@ -99,8 +99,8 @@
                     class="card-img-top h-50 img-item" alt="...">
                 <div class="card-body m-0 ">
                     <h5 class="card-title">TABLES</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <p class="card-text"> Price starts from $30.00-$150.00</p>
+                    <p>ABOUT SPACE Coffee - Solid Finish Table Office L 3 X B 1.3 X 1.4 Ft</p>
+                    <p class="card-text"> $90.00</p>
                     <a href="#" class="btn btn-secondary">BUY NOW</a>
                 </div>
             </div>
